src/objects/ICG_Contact_Role_Detail__c.object
<CustomObject>
    <description>Function assigned to a contact towars a facility (ICG_Account_Role_Detail__c)</description>
    <label>ONE Source Contact Role Detail</label>
    <nameField>
        <displayFormat>CID-{0000}</displayFormat>
        <label>ONE Source Contact Role Detail Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>ONE Source Contact Role Details</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <fields>
        <fullName>Account_Contact_Role__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>Relationship between the Contact Role, and the role in the ICG Portal</description>
        <label>Account Contact Role</label>
        <referenceTo>Account_Contact_Role__c</referenceTo>
        <relationshipLabel>ONE Source Contact Role Details</relationshipLabel>
        <relationshipName>ICG_Contact_Role_Details</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Account_Name__c</fullName>
        <description>Account Name</description>
        <formula>Account_Role__r.Account_Name__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Role__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Fill this field if you are company admin of a specific Ops Hierarchy. This will determine the ops hierarchy that you belong to as company admin.</description>
        <label>Account Role</label>
        <referenceTo>Account_Role__c</referenceTo>
        <relationshipLabel>ONE Source Contact Role Details</relationshipLabel>
        <relationshipName>ICG_Contact_Role_Details</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Company_Admin_Approver_Rejector__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Who has Approved or Rejected the station</description>
        <label>Company Admin Approver/Rejector</label>
        <referenceTo>User</referenceTo>
        <relationshipName>ApprovedOrRejectedContactRoleDetails</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ContactId__c</fullName>
        <description>Describes the contact id</description>
        <formula>CASESAFEID(Account_Contact_Role__r.Contact__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>ContactId</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_Email__c</fullName>
        <description>Station Contact Email</description>
        <formula>Account_Contact_Role__r.Contact__r.Email</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Contact Email</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_Name__c</fullName>
        <description>Station Contact Name</description>
        <formula>Account_Contact_Role__r.Contact__r.FirstName +&apos; &apos;+ Account_Contact_Role__r.Contact__r.LastName</formula>
        <label>Contact Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_Role_Remove_Requestor__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Keep track of which user has requested the removal of a contact role detail.</description>
        <label>Contact Role Remove Requestor</label>
        <referenceTo>User</referenceTo>
        <relationshipName>ICG_Contact_Role_Details</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ICG_Account_Role_Detail__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Relationship between the ICG Contact role detail, and the facility.</description>
        <label>ONE Source Account Role Detail</label>
        <referenceTo>ICG_Account_Role_Detail__c</referenceTo>
        <relationshipLabel>ONE Source Contact Role Details</relationshipLabel>
        <relationshipName>ICG_Contact_Role_Details</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ICG_Role__c</fullName>
        <description>To define the visibility and functionalities availables for a specific contact in the ICG Portal</description>
        <label>ONE Source Role</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>ICG_Contact_Role_Details</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>isApproved__c</fullName>
        <description>Checkbox to determine if the request is approved</description>
        <formula>ISPICKVAL( Status__c ,&quot;Approved&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>isApproved</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>isPendingApproval__c</fullName>
        <description>Checkbox to determine if the request is pending for approval</description>
        <formula>ISPICKVAL( Status__c , &quot;Pending for Approval&quot;) || ISPICKVAL( Status__c , &quot;Pending for IATA Approval&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>isPendingApproval</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Reject_Reason__c</fullName>
        <description>Reason of the request was rejected</description>
        <label>Reject Reason</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Station_Global_ID__c</fullName>
        <description>Global Station Id</description>
        <formula>ICG_Account_Role_Detail__r.Global_ID__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Station Global ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <description>Describes the status of the contact</description>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Pending for Approval</fullName>
                </value>
                <value>
                    <fullName>Approved</fullName>
                </value>
                <value>
                    <fullName>Rejected</fullName>
                </value>
                <value>
                    <fullName>Removed</fullName>
                </value>
                <value>
                    <fullName>Pending for Removal</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <validationRules>
        <fullName>Accounts_Correspond</fullName>
        <active>true</active>
        <description>When the role is Facility Manager, the account of the Account Contact Role and the station must coincide.</description>
        <errorConditionFormula>AND(  ISPICKVAL(ICG_Role__c,&quot;Facility Manager&quot;) ,   Account_Contact_Role__r.Account__c  &lt;&gt;  ICG_Account_Role_Detail__r.Account_Role__r.Account__c  )</errorConditionFormula>
        <errorMessage>The Account of the Account Contact Role and the Station must be the same.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Station_Role_Company_Admin</fullName>
        <active>true</active>
        <description>When the role is &quot;Company Admin&quot;, then the account role needs to be filled out.</description>
        <errorConditionFormula>AND( ISPICKVAL(ICG_Role__c,&quot;Company Admin&quot;) , OR( ISNULL(   Account_Role__c   ) , ISBLANK(Account_Role__c)) )</errorConditionFormula>
        <errorDisplayField>Account_Role__c</errorDisplayField>
        <errorMessage>When the role is &quot;Company Admin&quot;, then the account role needs to be filled out.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Station_Role_Facility</fullName>
        <active>true</active>
        <description>Station has to be filled when role is &quot;Facility Manager&quot;</description>
        <errorConditionFormula>AND(  ISPICKVAL(ICG_Role__c,&quot;Facility Manager&quot;) ,  OR( ISNULL( ICG_Account_Role_Detail__c ) , ISBLANK(ICG_Account_Role_Detail__c)) )</errorConditionFormula>
        <errorDisplayField>ICG_Account_Role_Detail__c</errorDisplayField>
        <errorMessage>With the role &quot;Facility Manager&quot;, the station has to be filled</errorMessage>
    </validationRules>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>ICG_Stakeholders_ICG_Contact_Role_Detail</fullName>
        <filterScope>Queue</filterScope>
        <label>OneSource Stakeholders</label>
        <queue>ICG_Stakeholders</queue>
        <sharedTo>
            <allInternalUsers/>
        </sharedTo>
    </listViews>
</CustomObject>